--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,11 @@ body {
     -o-background-size: cover;
     -ms-background-size: cover;
     min-height: 100vh;
+    /* 添加背景 */
+    background-image: url('bj.jpg');
+    background-size: cover; /* 确保图片覆盖整个背景 */
+    background-position: center; /* 图片居中 */
+    background-repeat: no-repeat; /* 防止图片重复 */
 }
 
 @keyframes Gradient {
