--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ body {
 }
 
 .main-bg {
-     background: url(bj.jpg) no-repeat center; */
+     background: url(../bg.jpg) no-repeat center; */
     background-image: linear-gradient(0deg, #30DDCE 0%, #536976 100%); */
     background-color: transparent;
     background-size: cover;
