--- a/css/style.css
+++ b/css/style.css
@@ -264,7 +264,7 @@ h1 {
 
 .top-content-style {
     padding: 2vw 4vw 4vw;
-    background: #1cc7d0;
+    background: 0;
 }
 
 .top-content-style img {
@@ -276,7 +276,7 @@ h1 {
 }
 
 .sub-main-w3 form {
-    background: #ffff;
+    background: 0;
     padding: 2em;
     -webkit-box-shadow: 2px 5px 16px 2px rgba(16, 16, 16, 0.18);
     -moz-box-shadow: 2px 5px 16px 2px rgba(16, 16, 16, 0.18);
