--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@ h1 {
 }
 
 .bg-content-w3pvt {
-    max-width: 400px;
+    max-width: 500px;
     margin: 0 auto;
     background: 0;
     /*毛玻璃注释backdrop-filter: blur(0px);*/
@@ -290,7 +290,7 @@ h1 {
 }
 
 p.legend {
-    color: #4e4d4d;
+    color: #ffff46;
     font-size: 24px;
     text-align: center;
     margin-bottom: 1.2em;
